<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/editSongsMenuItem"
        android:icon="@drawable/ic_edit_button"
        android:title="@string/EditSongList"
        app:showAsAction="always">
    </item>

    <item
        android:id="@+id/sortMenuItem"
        android:icon="@drawable/ic_sort_button"
        android:title="@string/SortAll"
        app:showAsAction="always">
    </item>

    <item
        android:id="@+id/addFromListMenuItem"
        android:title="@string/SetListAddFrom"
        app:showAsAction="never">
    </item>

    <item
        android:id="@+id/renameListMenuItem"
        android:title="@string/SetListRenameAction"
        app:showAsAction="never">
    </item>

    <item
        android:id="@+id/duplicateListMenuItem"
        android:title="@string/SetListDuplicateAction"
        app:showAsAction="never">
    </item>

    <item
        android:id="@+id/deleteListMenuItem"
        android:title="@string/SetListDeleteAction"
        app:showAsAction="never">
    </item>

    <item
        android:id="@+id/manageListsMenuItem"
        android:title="@string/SetListManageAction"
        app:showAsAction="never">
    </item>

</menu>
