<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <depollsoft.pitchperfect.CropFillImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:adjustViewBounds="true"
        android:scaleType="centerCrop"
        app:srcCompat="@drawable/bg_etched_staff" />

        <depollsoft.pitchperfect.HeritageScoreView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:importantForAccessibility="no" />

    <LinearLayout
        android:id="@+id/topLinearLayout"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical">

        <ScrollView
            android:id="@+id/scrollView1"
            android:layout_width="fill_parent"
            android:layout_height="0dip"
            android:layout_weight="1">

            <LinearLayout
                android:id="@+id/linearLayout3"
                android:layout_width="fill_parent"
                android:layout_height="0dip"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/SectionPitchPipe"
                    android:textAppearance="@style/TextAppearance.Plate.SectionHeader" />

                <CheckBox
                    android:id="@+id/toggleNoteCheckBox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/NotesToggle" />

                <CheckBox
                    android:id="@+id/wakeLockCheckBox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/WakeLock" />

                <Button
                    android:id="@+id/clearSongListButton"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/ClearSongList" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:text="@string/SectionAccount"
                    android:textAppearance="@style/TextAppearance.Plate.SectionHeader" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/LogInInfo" />

                <LinearLayout
                    android:id="@+id/loginButtonLayout"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginBottom="16dp">

                    <Button
                        android:id="@+id/loginButton"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight=".5"
                        android:text="@string/LogIn" />

                    <Button
                        android:id="@+id/logoutButton"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight=".5"
                        android:text="@string/LogOut" />

                    <Button
                        android:id="@+id/deleteAccountButton"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight=".5"
                        android:text="@string/DeleteAccount" />
                </LinearLayout>

                <TextView
                    android:id="@+id/themeTitleTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:layout_marginBottom="5dp"
                    android:text="@string/SectionAppearance"
                    android:textAppearance="@style/TextAppearance.Plate.SectionHeader" />

                <RadioGroup
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/radio_system"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/theme_system" />

                    <RadioButton
                        android:id="@+id/radio_light"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/theme_light" />

                    <RadioButton
                        android:id="@+id/radio_dark"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/theme_dark" />
                </RadioGroup>

                <Button
                    android:id="@+id/manageSubscriptionButton"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/manage_subscription" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:text="@string/SectionAbout"
                    android:textAppearance="@style/TextAppearance.Plate.SectionHeader" />

                <Button
                    android:id="@+id/changelogButton"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/ViewChangelog" />

                <include layout="@layout/aboutfooter" />
                <LinearLayout
                    android:id="@+id/privateBuildDiagnostics"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="12dp"
                    android:orientation="vertical"
                    android:visibility="gone">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Private Build"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/privateBuildMetadata"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="2dp"
                        android:alpha="0.7"
                        android:textSize="12sp" />

                    <Button
                        android:id="@+id/copyLogsButton"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="Copy Logs" />
                </LinearLayout>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>

</FrameLayout>